--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,44 +1,77 @@
 .p {
-    width: 30%;
-    height: 40vh;
-    max-width: 20px 10px;
-    border: 2px solid rgb(243, 242, 242);
-    border-radius: 10px 10px 0px 0px;
-    overflow: hidden;
+  width: 50%;
+  height: 40vh;
+  /* max-width: 20px 10px; */
+  border: 2px solid rgb(243, 242, 242);
+  border-radius: 10px 10px 0px 0px;
+  /* overflow: hidden; */
 }
 
 .p-browser {
-    height: 20px;
-    background-color: rgb(243, 242, 242);
-    display: flex;
-    align-items: center;
-    position: sticky;
-    z-index: 2;
+  height: 20px;
+  background-color: rgb(243, 242, 242);
+  display: flex;
+  align-items: center;
+  position: sticky;
+  z-index: 2;
 }
 
 .p-circle {
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    margin: 3px;
-    background-color: white;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  margin: 3px;
+  background-color: white;
 }
 
 .p-img {
-    width: 100%;
-    transition: all 10s ease;
+  width: 100%;
+  height: 50%;
+  /* transition: all 10s ease; */
 }
 
-.p:hover .p-img {
-    transform: translateY(-100%);
+/* .p:hover .p-img {
+  transform: translateY(-100%);
+} */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 50%;
 }
 
-@media screen and (max-width: 480px){
-    .p {
-        width: 40%;
-        height: 20vh;
-        margin: 10px;
-    }
+.image {
+  width: 100%;
+  height: 40vh;
+  border: 2px solid rgb(243, 242, 242);
+  border-radius: 10px 10px 0px 0px;
+}
 
-    
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.85);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: zoom-out;
+  z-index: 999;
+}
+
+.modal-img {
+  max-width: 90%;
+  max-height: 80%;
+  border-radius: 12px;
+}
+
+@media screen and (max-width: 480px) {
+  .p {
+    width: 40%;
+    height: 20vh;
+    margin: 10px;
+  }
 }
