--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,147 +1,158 @@
 .i {
-    display: flex;
-    height: 100vh;
-    opacity: 1;
+  display: flex;
+  height: 100vh;
+  opacity: 1;
 }
 
 /* INITIAL STATE: hidden, slightly off-screen */
 .i-left,
 .i-right {
-    opacity: 0;
-    transition: all 1s ease-in-out;
+  opacity: 0;
+  transition: all 1s ease-in-out;
 }
 
 /* Slide left content from LEFT → RIGHT */
 .i-left {
-    transform: translateX(-50px);
+  transform: translateX(-50px);
 }
 
 /* Slide right content from RIGHT → LEFT */
 .i-right {
-    transform: translateX(50px);
+  transform: translateX(50px);
 }
 
 /* ACTIVE STATE: fade + slide to position */
 .i.animate .i-left,
 .i.animate .i-right {
-    opacity: 1;
-    transform: translateX(0);
+  opacity: 1;
+  transform: translateX(0);
 }
 
 /* Existing styles */
 .i-left {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .i-right {
-    flex: 1;
-    position: relative;
+  flex: 1;
+  position: relative;
 }
 
 .i {
-    display: flex;
-    height: 100vh;
+  display: flex;
+  height: 100vh;
 }
 
 .i-left {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .i-right {
-    flex: 1;
-    position: relative;
+  flex: 1;
+  position: relative;
 }
 
 .i-left-wrapper {
-    padding: 50px;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  padding: 50px;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .i-intro {
-    font-size: 30px;
-    font-weight: 300;
+  font-size: 30px;
+  font-weight: 300;
 }
 
 .i-name {
-    font-size: 60px;
+  font-size: 60px;
 }
 
 .i-title {
-    height: 50px;
-    overflow: hidden;
+  height: 50px;
+  overflow: hidden;
 }
 
 .i-title-wrapper {
-    height: 100%;
-    animation: move 10s ease-in-out infinite alternate;
+  height: 100%;
+  animation: move 10s ease-in-out infinite alternate;
 }
 
 @keyframes move {
-    25%{
-        transform: translateY(-50px);
-    }
-    50%{
-        transform: translateY(-100px);
-    }
+  25% {
+    transform: translateY(-50px);
+  }
+  50% {
+    transform: translateY(-100px);
+  }
 }
 
 .i-title-item {
-    height: 50px;
-    font-size: 30px;
-    font-weight: bold;
-    color: 	#0096FF;
-    display: flex;
-    align-items: center;
-
+  height: 50px;
+  font-size: 30px;
+  font-weight: bold;
+  color: #0096ff;
+  display: flex;
+  align-items: center;
 }
 
 .i-scroll {
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    bottom: 20px;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  bottom: 20px;
 }
 
 .i-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: relative;
 }
 
 .i-bg {
-    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
-    background-color: #89CFF0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
+  clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+  background-color: #89cff0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.lottie-wrapper {
+  margin-top: 20%;
+  width: 1000;
+  height: 1000;
 }
 
 @media screen and (max-width: 480px) {
-    .i {
-        flex-direction: column;
-    }
+  .i {
+    flex-direction: column;
+  }
 
-    .i-left-wrapper {
-        padding: 10px;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        height: 100%;
-    }
+  .i-left-wrapper {
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+  }
 
-    .i-desc {
-        display: none;
-    }
+  .i-desc {
+    display: none;
+  }
+
+  .lottie-wrapper {
+    margin-top: 15%;
+    width: 900;
+    height: 900;
+  }
 }
