--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -74,4 +74,17 @@
     height: 20vh;
     margin: 10px;
   }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 80%;
+    font-size: 10px;
+  }
+
+  .image {
+    width: 100%;
+    height: 25vh;
+  }
 }
